# StartFlow

./: .gitignore  README.md  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-ai.txt  requirements.docker.txt  requirements.txt
backend/application/: __init__.py
backend/infrastructure/ai/: __init__.py  model_loader.py
backend/src/: config.py  database.py  main.py  utils.py
backend/src/api/: auth.py  charts.py  dependencies.py  link_endpoints.py  statement.py
backend/src/api/api/: charts.py  columns.py  description.py  project_members.py  projects.py  task_assignees.py  tasks.py  tempCodeRunnerFile.py  users.py
backend/src/api/v1/: columns.py  project_members.py  projects.py  tasks.py  users.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2026_03_21_1544-7874f74019d0_create_users_table.py  2026_03_21_1705-24287254d6e2_create_projects_table.py  2026_03_21_1910-a0e953c50bae_create_projectmembers_table.py  2026_03_21_1926-06c76e1316c2_create_columns_table.py  2026_03_21_1950-87563ae5f1c7_create_tasks_table.py  (+5 more)
backend/src/models/: __init__.py  columns.py  links.py  project_members.py  projects.py  task_assignees.py  tasks.py  users.py
backend/src/repositories/: base.py  project.py  project_members.py  users.py
backend/src/schemas/: ai.py  charts.py  column.py  description.py  project.py  project_member.py  task.py  task_assign.py  user.py  users.py
backend/src/services/: auth.py  charts.py  project_members.py  statement.py
(+66 files in other folders)
