[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.31.0",
    "black==26.3.1",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "defusedxml==0.7.1",
    "fastapi==0.135.2",
    "fonttools==4.63.0",
    "fpdf2==2.8.7",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.27.2",
    "idna==3.11",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "mypy-extensions==1.1.0",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pillow==12.2.0",
    "platformdirs==4.9.4",
    "pwdlib==0.3.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "pytokens==0.4.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.48",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.42.0",
]
